--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 	<section class="grid-container">
 		<h2>Imagery</h2>
 		<div class="imagery-1">
-			<img src="http://placehold.it/300x200">
+			<img src= img/fall.jpg>
 		</div>
 		<div class="imagery-2">
-			<img src="http://placehold.it/300x200">
+			<img src= img/winter.jpg>
 		</div>
 		<div class="imagery-3">
-			<img src="http://placehold.it/300x200">
+			<img src= img/lights.jpg>
 		</div>
 	</section>
 
@@ -63,13 +63,13 @@
 	<section class="grid-container">
 		<h2>Icons</h2>
 		<div class="icon-1">
-			<img src="img/icon-sample.svg">
+			<img src="img/download-6-icon.svg">
 		</div>
 		<div class="icon-2">
-			<img src="img/icon-sample.svg">
+			<img src="img/email-10-icon.svg">
 		</div>
 		<div class="icon-3">
-			<img src="img/icon-sample.svg">
+			<img src="img/smartphone-4-icon.svg">
 		</div>
 	</section>	
 
